[package]
name = "rust-threat-detector"
version = "0.1.0"
edition = "2021"
authors = ["Tony Chuks Awunor <your-email@example.com>"]
description = "Memory-safe SIEM threat detection component for real-time security monitoring"
license = "MIT"
repository = "https://github.com/your-username/rust-threat-detector"
keywords = ["security", "siem", "threat-detection", "monitoring", "memory-safe"]
categories = ["network-programming", "cryptography"]

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
thiserror = "1.0"

[dev-dependencies]

[[example]]
name = "detect_threats"
path = "examples/detect_threats.rs"
