[package]
name = "rust-threat-detector"
version = "0.1.0"
edition = "2021"
authors = ["Tony Chuks Awunor <chuksawunor@guardsarm.com>"]
description = "Memory-safe SIEM threat detection component for real-time security monitoring"
license = "MIT"
repository = "https://github.com/guardsarm/rust-threat-detector"
keywords = ["security", "siem", "threat-detection", "monitoring", "memory-safe"]
categories = ["network-programming", "cryptography"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
thiserror = "1.0"

[dev-dependencies]

[[example]]
name = "detect_threats"
path = "examples/detect_threats.rs"
